--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Set Up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
+          python-version: "3.x"
 
       - name: Set Cache ID
         run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV
@@ -45,16 +45,13 @@ jobs:
           restore-keys: |
             mkdocs-material-
 
-      - name: Install Poetry
+      - name: Install uv
         run: |
-          curl -sSL https://install.python-poetry.org | python3 -
-          ln -s /root/.local/bin/poetry /usr/local/bin/poetry
-
-      - name: Configure Poetry
-        run: poetry config virtualenvs.create false
+          curl -LsSf https://astral.sh/uv/install.sh | sh
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
 
       - name: Install Dependencies
-        run: poetry install --no-root --no-interaction --no-ansi --only=docs
+        run: uv sync --extra docs --frozen
 
       - name: Deploy to GitHub Pages
         env:
